@@ -1,6 +1,7 @@
 V2.4
 New Features:
-  - A character concept generator
+  - encounter generator
+  - character concept generator
   - monster builder add buttons to save statblock as image and print statblock
   - monster builder fully integrate class selection
   - monster builder add gear selection
